# vsterm

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
assets/fonts/: README.md
assets/icons/: README.md  vsterm.desktop
assets/icons/macos/: Info.plist  VsTerm.icns
assets/icons/web/: site.webmanifest
assets/shell/: README.md  vsterm-osc133.sh  vsterm.fish
crates/app-ui/: Cargo.toml  build.rs
crates/app-ui/src/: app.rs  commands.rs  conn_error.rs  ctx_menu.rs  dialog_chrome.rs  fonts.rs  fx.rs  i18n.rs  icon.rs  main.rs  metrics.rs  os_icon.rs  remote_host.rs  render_policy.rs  sys_file_icon.rs  term_highlight.rs  terminal_view.rs  theme.rs  ui_icon.rs
crates/app-ui/src/panels/: bottom_panel.rs  connect_auth.rs  connection_list.rs  host_toolbar.rs  mod.rs  monitor.rs  routes.rs  session_editor.rs  session_tree_panel.rs  status_bar.rs  toolbar.rs
crates/connection-mgr/: Cargo.toml
crates/connection-mgr/examples/: mem_stress.rs
crates/connection-mgr/src/: auth.rs  backend.rs  error.rs  known_hosts.rs  lib.rs  manager.rs  posix_text.rs  process.rs  remote_exec.rs  remote_fs.rs  remote_tree.rs  russh_backend.rs  shell_integration.rs  ssh_ident.rs  ssh_io.rs  system_ssh.rs  user_error.rs
crates/patches/russh-cryptovec/: Cargo.toml
crates/patches/russh-cryptovec/src/platform/: windows.rs
crates/session-tree/: Cargo.toml
crates/session-tree/src/: config.rs  error.rs  lib.rs  store.rs  tree.rs
crates/term-core/: Cargo.toml
crates/term-core/src/: error.rs  lib.rs  local_pty.rs  osc133.rs  shell_marks.rs  terminal.rs  zmodem.rs
crates/vault/: Cargo.toml
crates/vault/src/: error.rs  lib.rs  store.rs
docs/: ROADMAP.md
tools/gen_os_icons/: Cargo.toml
tools/gen_os_icons/src/: main.rs
