[workspace]
resolver = "2"
members = [
    "crates/session-tree",
    "crates/vault",
    "crates/term-core",
    "crates/connection-mgr",
    "crates/app-ui",
]
default-members = ["crates/app-ui"]

[workspace.package]
version = "1.0.16"
edition = "2021"
license-file = "LICENSE"
authors = ["vesaa"]
repository = "https://github.com/vesaaa/vsterm"
description = "Cross-platform SSH terminal manager built with Rust (egui + alacritty_terminal)"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "process", "net", "fs"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Error / logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GUI — wgpu; x11+wayland needed on Linux (default-features=false drops them)
eframe = { version = "0.31", default-features = false, features = ["accesskit", "default_fonts", "wgpu", "x11", "wayland"] }
egui = "0.31"
wgpu = { version = "24", default-features = false, features = ["dx12", "metal", "wgsl"] }

# Terminal
alacritty_terminal = "0.25"
portable-pty = "0.8"

# SSH (full wiring in stage 4)
russh = { version = "0.62.2", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2.0.5"

# Security
keyring = "3"
age = "0.11"
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
rfd = "0.15"
parking_lot = "0.12"
bytes = "1"
regex = "1"
once_cell = "1"
sysinfo = "0.33"
egui_plot = "0.31"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
encoding_rs = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
arboard = "3"
iconflow = { version = "1", default-features = false, features = ["pack-lucide"] }
# Allocator: SFTP transfers free packet buffers across russh and disk-writer
# threads. mimalloc handles that churn without serializing the UI heap.
# `extended` exposes mi_collect / mi_option_* so we can reclaim worker heaps
# after a transfer (cross-thread frees otherwise sit in abandoned segments).
mimalloc = { version = "0.1", features = ["extended"] }
libmimalloc-sys = { version = "0.1", features = ["extended"] }

# Internal crates
session-tree = { path = "crates/session-tree" }
vault = { path = "crates/vault" }
term-core = { path = "crates/term-core" }
connection-mgr = { path = "crates/connection-mgr" }

# Optimize dependencies (esp. crypto: aes-gcm, aes, chacha20, ghash) even in dev
# builds. At opt-level=0 the cipher throughput is crippled, which directly caps
# SFTP transfer speed. Our own crates stay unoptimized for fast iteration.
[profile.dev.package."*"]
opt-level = 3
