[package]
name = "connection-mgr"
version.workspace = true
edition.workspace = true
description = "Dual SSH backend abstraction and connection lifecycle management"

[dependencies]
session-tree = { workspace = true }
term-core = { workspace = true }
vault = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
russh = { workspace = true }
russh-sftp = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
libmimalloc-sys = { workspace = true }

[dev-dependencies]
mimalloc = { workspace = true }
